--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ header {
     background-color: red;
     height: 75px;
     width: 100%;
+    display: flex;
 }
 
 .logo {
@@ -10,20 +11,46 @@ header {
     width: 10%;
 }
 
+.headerparent {
+    display: flex;
+}
+
+.headerelement {
+    margin: 10px;
+    padding: 15px;
+}
+
+.headeranother {
+    margin: 10px;
+    padding: 15px;
+    flex-direction: row-reverse;
+}
+
+.rank {
+    margin: 10px;
+    padding: 10px;
+}
+
+.dwt {
+    margin: 0 auto;
+    text-align: center;
+    background-color: lightgreen;
+}
+
 .freem {
     text-align: center;
     padding: 10px; 
 }
 
 .maincont {
-    height: 900px;
+    height: 1800px;
     width: 100%;
     display: flex;
 }
 
 main {
     background-color: yellow;
-    height: 900px;
+    height: 1800px;
     width: 85%;
     float: right;
     display: flex;
@@ -33,7 +60,7 @@ main {
 
 .menu {
     background-color: green;
-    height: 900px;
+    height: 1800px;
     width: 15%;
 }
 
@@ -43,12 +70,15 @@ main {
     width: 250px;
     display: inline-block;
     margin: 30px;
+    text-align: center;
     
 }
 
+
+
 footer {
     background-color: blue;
-    height: 50px;
+    height: 300px;
     width: 100%;
 }
 
